# phase-edge

./: .gitignore  pyproject.toml  pyproject.toml~
scripts/: add_ensure_workflow.py  add_mace_relax.py  add_random_mace_relax.py  ensure_ce.py  node_usage.sh  test_launch.sh  wl255.slurm
src/phaseedge/cli/: common.py  db.py  db_info.py  db_reset.py  ensure_ce.py  ensure_ce_from_mixtures.py  ensure_ce_from_refined_wl.py  ensure_dopt_ce.py  ensure_wang_landau.py  ensure_wl_from_ce.py  extend_wl.py  pe_wl_extend.py  refine_wl_samples.py  test_relax.py  wang_landau.py  wl_extend.py
src/phaseedge/export/: _common.py  double_perovskite_ce.py  garnet_ce.py  spinel_ce.py
src/phaseedge/flows/: ensure_snapshots.py  ensure_snapshots_composition.py  ensure_snapshots_compositions.py  ensure_snapshots_multi.py  mace_relax.py
src/phaseedge/jobs/: add_wl_block.py  add_wl_chunk.py  check_or_schedule_ce.py  check_or_schedule_wl.py  decide_relax.py  ensure_ce.py  ensure_ce_from_mixtures.py  ensure_ce_from_refined_wl.py  ensure_dataset_compositions.py  ensure_dataset_selected.py  ensure_dopt_ce.py  ensure_snapshots_composition.py  (+18 more)
test/: test_ce_validation.py  test_wang_landau.py
testing/: ce_statistics.ipynb  ce_stats.ipynb  cleanup.ipynb  compare_refined_ce.ipynb  delete_ce.ipynb  existing.json  launch_cmds.txt  ordered.json  organize_results.ipynb  test_emmet.ipynb  visualize_wl.ipynb
testing/cmds/: Li2MgCl4_2x2x2.txt  LiMgZrCl4_2x2x2.txt  MgAl2O4_2x2x2.txt  MgFe2O4_2x2x2.txt  MgFeO2_3x3x3.txt  MgGa2O4_2x2x2.txt  NiFe2O4_2x2x2.txt  Sr2TaAlO6_3x3x3.txt  ZnAl2O4_2x2x2.txt
(+125 files in other folders)
