[project]
name = "phase-edge"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
pe-extend-wl = "phaseedge.cli.extend_wl:main"
pe-ensure-ce-from-mixtures = "phaseedge.cli.ensure_ce_from_mixtures:main"
pe-ensure-dopt-ce = "phaseedge.cli.ensure_dopt_ce:main"

[tool.setuptools.packages.find]
where = ["src"]
